build/log/idf_py_stdout_output_34308
Command: ninja all
[1/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
ccache C:\Users\rfink\.espressif\tools\xtensa-esp-elf\esp-14.2.0_20241119\xtensa-esp-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.5-dev-3749-g98cd765953\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/Users/rfink/OneDrive/Documentos/ESP-IDF/SSD1309_BareMetal/build/config -IC:/Users/rfink/OneDrive/Documentos/ESP-IDF/SSD1309_BareMetal/main -IC:/Users/rfink/esp/v5.5/esp-idf/components/newlib/platform_include -IC:/Users/rfink/esp/v5.5/esp-idf/components/freertos/config/include -IC:/Users/rfink/esp/v5.5/esp-idf/components/freertos/config/include/freertos -IC:/Users/rfink/esp/v5.5/esp-idf/components/freertos/config/xtensa/include -IC:/Users/rfink/esp/v5.5/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/Users/rfink/esp/v5.5/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Users/rfink/esp/v5.5/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/Users/rfink/esp/v5.5/esp-idf/components/freertos/esp_additions/include -IC:/Users/rfink/esp/v5.5/esp-idf/components/esp_hw_support/include -IC:/Users/rfink/esp/v5.5/esp-idf/components/esp_hw_support/include/soc -IC:/Users/rfink/esp/v5.5/esp-idf/components/esp_hw_support/include/soc/esp32 -IC:/Users/rfink/esp/v5.5/esp-idf/components/esp_hw_support/dma/include -IC:/Users/rfink/esp/v5.5/esp-idf/components/esp_hw_support/ldo/include -IC:/Users/rfink/esp/v5.5/esp-idf/components/esp_hw_support/debug_probe/include -IC:/Users/rfink/esp/v5.5/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -IC:/Users/rfink/esp/v5.5/esp-idf/components/esp_hw_support/power_supply/include -IC:/Users/rfink/esp/v5.5/esp-idf/components/esp_hw_support/port/esp32/. -IC:/Users/rfink/esp/v5.5/esp-idf/components/esp_hw_support/port/esp32/include -IC:/Users/rfink/esp/v5.5/esp-idf/components/heap/include -IC:/Users/rfink/esp/v5.5/esp-idf/components/heap/tlsf -IC:/Users/rfink/esp/v5.5/esp-idf/components/log/include -IC:/Users/rfink/esp/v5.5/esp-idf/components/soc/include -IC:/Users/rfink/esp/v5.5/esp-idf/components/soc/esp32 -IC:/Users/rfink/esp/v5.5/esp-idf/components/soc/esp32/include -IC:/Users/rfink/esp/v5.5/esp-idf/components/soc/esp32/register -IC:/Users/rfink/esp/v5.5/esp-idf/components/hal/platform_port/include -IC:/Users/rfink/esp/v5.5/esp-idf/components/hal/esp32/include -IC:/Users/rfink/esp/v5.5/esp-idf/components/hal/include -IC:/Users/rfink/esp/v5.5/esp-idf/components/esp_rom/include -IC:/Users/rfink/esp/v5.5/esp-idf/components/esp_rom/esp32/include -IC:/Users/rfink/esp/v5.5/esp-idf/components/esp_rom/esp32/include/esp32 -IC:/Users/rfink/esp/v5.5/esp-idf/components/esp_rom/esp32 -IC:/Users/rfink/esp/v5.5/esp-idf/components/esp_common/include -IC:/Users/rfink/esp/v5.5/esp-idf/components/esp_system/include -IC:/Users/rfink/esp/v5.5/esp-idf/components/esp_system/port/soc -IC:/Users/rfink/esp/v5.5/esp-idf/components/esp_system/port/include/private -IC:/Users/rfink/esp/v5.5/esp-idf/components/xtensa/esp32/include -IC:/Users/rfink/esp/v5.5/esp-idf/components/xtensa/include -IC:/Users/rfink/esp/v5.5/esp-idf/components/xtensa/deprecated_include -IC:/Users/rfink/esp/v5.5/esp-idf/components/driver/deprecated -IC:/Users/rfink/esp/v5.5/esp-idf/components/driver/i2c/include -IC:/Users/rfink/esp/v5.5/esp-idf/components/driver/touch_sensor/include -IC:/Users/rfink/esp/v5.5/esp-idf/components/driver/twai/include -IC:/Users/rfink/esp/v5.5/esp-idf/components/driver/touch_sensor/esp32/include -IC:/Users/rfink/esp/v5.5/esp-idf/components/esp_pm/include -IC:/Users/rfink/esp/v5.5/esp-idf/components/esp_ringbuf/include -IC:/Users/rfink/esp/v5.5/esp-idf/components/esp_driver_gpio/include -IC:/Users/rfink/esp/v5.5/esp-idf/components/esp_driver_pcnt/include -IC:/Users/rfink/esp/v5.5/esp-idf/components/esp_driver_gptimer/include -IC:/Users/rfink/esp/v5.5/esp-idf/components/esp_driver_spi/include -IC:/Users/rfink/esp/v5.5/esp-idf/components/esp_driver_mcpwm/include -IC:/Users/rfink/esp/v5.5/esp-idf/components/esp_driver_ana_cmpr/include -IC:/Users/rfink/esp/v5.5/esp-idf/components/esp_driver_i2s/include -IC:/Users/rfink/esp/v5.5/esp-idf/components/esp_driver_sdmmc/include -IC:/Users/rfink/esp/v5.5/esp-idf/components/sdmmc/include -IC:/Users/rfink/esp/v5.5/esp-idf/components/esp_driver_sdspi/include -IC:/Users/rfink/esp/v5.5/esp-idf/components/esp_driver_sdio/include -IC:/Users/rfink/esp/v5.5/esp-idf/components/esp_driver_dac/include -IC:/Users/rfink/esp/v5.5/esp-idf/components/esp_driver_rmt/include -IC:/Users/rfink/esp/v5.5/esp-idf/components/esp_driver_tsens/include -IC:/Users/rfink/esp/v5.5/esp-idf/components/esp_driver_sdm/include -IC:/Users/rfink/esp/v5.5/esp-idf/components/esp_driver_i2c/include -IC:/Users/rfink/esp/v5.5/esp-idf/components/esp_driver_uart/include -IC:/Users/rfink/esp/v5.5/esp-idf/components/esp_driver_ledc/include -IC:/Users/rfink/esp/v5.5/esp-idf/components/esp_driver_parlio/include -IC:/Users/rfink/esp/v5.5/esp-idf/components/esp_driver_usb_serial_jtag/include -IC:/Users/rfink/esp/v5.5/esp-idf/components/esp_driver_twai/include -IC:/Users/rfink/OneDrive/Documentos/ESP-IDF/SSD1309_BareMetal/managed_components/espressif__led_strip/include -IC:/Users/rfink/OneDrive/Documentos/ESP-IDF/SSD1309_BareMetal/managed_components/espressif__led_strip/interface -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=C:/Users/rfink/OneDrive/Documentos/ESP-IDF/SSD1309_BareMetal=. -fmacro-prefix-map=C:/Users/rfink/esp/v5.5/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c C:/Users/rfink/OneDrive/Documentos/ESP-IDF/SSD1309_BareMetal/main/main.c
C:/Users/rfink/OneDrive/Documentos/ESP-IDF/SSD1309_BareMetal/main/main.c: In function 'app_main':
C:/Users/rfink/OneDrive/Documentos/ESP-IDF/SSD1309_BareMetal/main/main.c:11:5: error: implicit declaration of function 'vTaskDelay' [-Wimplicit-function-declaration]
   11 |     vTaskDelay(1000);
      |     ^~~~~~~~~~
C:/Users/rfink/OneDrive/Documentos/ESP-IDF/SSD1309_BareMetal/main/main.c:12:5: error: implicit declaration of function 'ssd1309_cmd'; did you mean 'ssd1309_clear'? [-Wimplicit-function-declaration]
   12 |     ssd1309_cmd(0xAE);
      |     ^~~~~~~~~~~
      |     ssd1309_clear
[2/10] Performing build step for 'bootloader'
[1/1] C:\WINDOWS\system32\cmd.exe /C "cd /D C:\Users\rfink\OneDrive\Documentos\ESP-IDF\SSD1309_BareMetal\build\bootloader\esp-idf\esptool_py && C:\Users\rfink\.espressif\python_env\idf5.5_py3.11_env\Scripts\python.exe C:/Users/rfink/esp/v5.5/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 C:/Users/rfink/OneDrive/Documentos/ESP-IDF/SSD1309_BareMetal/build/bootloader/bootloader.bin"
Bootloader binary size 0x6680 bytes. 0x980 bytes (8%) free.
[3/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/ssd1309.c.obj
ninja: build stopped: subcommand failed.
